# What-rs

./: Cargo.toml  LICENSE-MIT  README.md  build.rs
.github/: secret_scanning.yml
.github/workflows/: check_version.yml  multi-platform-release.yml  test.yml
data/: regex.json
manifests/j/JannikGohr/what-rs/0.2.3/: JannikGohr.what-rs.installer.yaml  JannikGohr.what-rs.locale.en-US.yaml  JannikGohr.what-rs.yaml
src/: cli.rs  filter.rs  format.rs  identifier.rs  main.rs  options.rs  regex_pd.rs  sorter.rs
src/identifier/: pcap.rs  pcapng.rs  pcapng_identifier.rs
tests/: cli.rs
wix/: HOW_TO_BUILD.md  windows-installer.wxs
