[package]
name = "What-rs"
version = "0.1.0"
edition = "2021"
authors = ["Jannik Gohr <JannikG-Dev@pm.me>"]
description = """What-rs - Identify what something is\n
A pyWhat reimplemantation in Rust made by <https://github.com/jannikgohr>"""
homepage = "https://github.com/jannikgohr/What-rs"

[[bin]]
name = "What-rs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
human-panic = "2.0.2"
anyhow = "1.0.91"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
fancy-regex = "0.14.0"
regex = "1.11.1"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
assert_fs = "1.1.1"