[package]
name = "What-rs"
version = "0.1.2"
edition = "2021"
authors = ["Jannik Gohr <JannikG-Dev@pm.me>"]
description = """What-rs - Identify what something is!\n
A pyWhat reimplemantation in Rust."""
homepage = "https://github.com/jannikgohr/What-rs"

[profile.release]
codegen-units = 1
lto = true

[[bin]]
name = "What-rs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
human-panic = "2.0.2"
anyhow = "1.0.91"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
fancy-regex = "0.14.0"
regex = "1.11.1"
colored = "2.1.0"
tabled = { version = "0.16.0", features = ["ansi"] }
terminal_size = "0.4.0"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
assert_fs = "1.1.1"