[package]
name = "what-rs"
version = "0.2.3"
edition = "2021"
authors = ["Jannik Gohr <JannikG-Dev@pm.me>"]
description = """Identify what something is!
A pyWhat reimplementation in Rust."""
homepage = "https://github.com/jannikgohr/what-rs"
repository = "https://github.com/jannikgohr/what-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
exclude = ["/.github", "/.idea", "tests"]
keywords = ["regex", "pattern-matching", "text-analysis", "identifier", "CLI"]
categories = ["command-line-utilities", "text-processing"]

[profile.release]
codegen-units = 1
lto = true

[[bin]]
name = "what-rs"
path = "src/main.rs"

[dependencies]
rayon = "1.10.0"
clap = { version = "4.5.20", features = ["derive"] }
clap_complete = { version = "4.5.36", features = ["unstable-dynamic"]}
human-panic = "2.0.2"
anyhow = "1.0.91"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
fancy-regex = "0.14.0"
regex = "1.11.1"
colored = "2.1.0"
tabled = { version = "0.16.0", features = ["ansi"] }
terminal_size = "0.4.0"
once_cell = "1.20.2"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
assert_fs = "1.1.1"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fancy-regex = "0.14"
regex = "1.10"